--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "url": "https://github.com/techniponi/e669-neo/issues"
   },
   "homepage": "https://github.com/techniponi/e669-neo#readme",
-  "dependencies": {}
+  "dependencies": {
+    "@types/jquery": "^3.5.5",
+    "jquery": "^3.5.1"
+  }
 }
