--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "build": "node_modules/.bin/webpack -p --progress"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
+    "@types/packery": "^1.4.32",
     "copy-webpack-plugin": "^6.0.3",
     "html-webpack-plugin": "^4.3.0",
+    "jquery": "^3.6.4",
+    "packery": "^2.1.2",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
@@ -26,9 +30,5 @@
   "bugs": {
     "url": "https://github.com/techniponi/e669-neo/issues"
   },
-  "homepage": "https://github.com/techniponi/e669-neo#readme",
-  "dependencies": {
-    "@types/jquery": "^3.5.5",
-    "jquery": "^3.5.1"
-  }
+  "homepage": "https://github.com/techniponi/e669-neo#readme"
 }
