--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "build": "node_modules/.bin/webpack -p --progress"
   },
   "devDependencies": {
+    "@types/imagesloaded": "^4.1.2",
     "@types/jquery": "^3.5.16",
     "@types/packery": "^1.4.32",
     "copy-webpack-plugin": "^6.0.3",
     "html-webpack-plugin": "^4.3.0",
+    "imagesloaded": "^5.0.0",
     "jquery": "^3.6.4",
     "packery": "^2.1.2",
     "ts-loader": "^7.0.5",
